# psetgroups

./: .gitignore  README.md  package-lock.json  package.json
matching/: api.py  blossom.py  form.py  hill_climbing.py  matchings.py  max_matching.py  pyproject.toml  similarity.py  test_hc.py  test_mm.py
src/components/: Availability.tsx  DropDownMenu.tsx  Faq.tsx  FaqCard.tsx  Hero.tsx  Placeholder.tsx  PreferencesForm.tsx  Radio.tsx
src/models/: Form.ts
src/pages/: index.tsx  preferences.tsx
src/pages/api/class/: [code].js
src/pages/api/preferences/: [id].js
src/templates/: Main.tsx
src/utils/: AppConfig.ts  dbConnect.js
website/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
website/src/components/: AvailabilityGrid.tsx  Confirmation.tsx  Cta.tsx  Faq.tsx  Features.tsx  PreferencesForm.tsx  Radio.tsx
website/src/models/: Form.ts
website/src/pages/: preferences.tsx
website/src/pages/api/preferences/: index.js
website/src/styles/: global.css
