[tool.poetry]
name = "matching"
version = "0.1.0"
description = "Creates matchings for psetgroups"
authors = ["Raphael <raphael.t.ruban@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
pydantic = "^1.9.0"
requests = "^2.27.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
